ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserModifierOnStatementInBlock4/input.ts.stderr
error: 'import', and 'export' cannot be used outside of module code
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserModifierOnStatementInBlock4/input.ts:2:4
  |
2 |    export function bar() {
  |    ^^^^^^

